# OrdernacaoVetores

./: CMakeLists.txt
BoubleSort/: Bouble  BoubleSort.cpp
BoubleSort/treinando/: bolha  bolha.cpp
BoubleSortPlus/: BoubleP  BoubleSortPlus.cpp
Quick/: Quick.cpp
SelectionSort/: Selection  Selection.cpp  SelectionTeste.cpp
